force-app/main/default/objects/Surcharge__c/Surcharge__c.object-meta.xml
<CustomObject>
    <label>Surcharge</label>
    <nameField>
        <displayFormat>SU{0000000}</displayFormat>
        <label>Surcharge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surcharges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>