force-app/main/default/objects/Surcharge__c/fields/currency_code__c.field-meta.xml
<CustomField>
    <fullName>currency_code__c</fullName>
    <label>Currency Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>NZD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>