force-app/main/default/objects/Surcharge__c/fields/orders__c.field-meta.xml
<CustomField>
    <fullName>orders__c</fullName>
    <label>orders</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Surcharges</relationshipLabel>
    <relationshipName>Surcharges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>