force-app/main/default/objects/Surcharge__c/fields/Surcharge_Type__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Type__c</fullName>
    <label>Surcharge Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule of Fees</fullName>
                <default>true</default>
                <label>Schedule of Fees</label>
            </value>
            <value>
                <fullName>Fare Difference</fullName>
            </value>
            <value>
                <fullName>Difference in Twin Share</fullName>
            </value>
            <value>
                <fullName>Reissue</fullName>
            </value>
            <value>
                <fullName>Name Change Fees</fullName>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>